<resources>
    <string name="app_name">FrescoPicLoad</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Fresco配置</string>
    <string name="title_activity_app_pic_load">App内图片加载</string>
    <string name="title_activity_app_gif_pic_load">App内Gif图片加载</string>
    <string name="title_activity_circle_pic">加载圆形图片</string>
    <string name="title_activity_pic_progress">图片加载过程显示</string>
    <string name="title_activity_cut_pic">显示图片裁剪</string>
    <string name="title_activity_down_pic">只下载不显示</string>
    <string name="title_activity_dialog">dialog式activity</string>
    <string name="title_activity_my_receiver">发送广播</string>
    <string name="title_activity_pic_list">图片列表</string>
    <string name="title_activity_video">视频播放</string>
    <string name="title_activity_blur_pic">高斯模糊</string>
    <string name="title_activity_cocktai_sort">鸡尾酒排序</string>
    <string name="title_activity_bubble_sort">冒泡排序</string>
    <string name="title_activity_quick_sort">快速排序</string>
    <string name="title_activity_heap_sort">堆排序</string>
    <string name="title_activity_binary_search">二分查找</string>
</resources>
